<resources>
    <string name="app_name">Weight Room</string>
    <string name="welcome">Welcome!</string>
    <string name="choose_a_workout_option">Choose a Workout Type from Below:</string>
    <string name="health_improvement">Health Improvement: </string>
    <string name="strength_training">Strength Training: </string>
    <string name="weight_loss">Weight Loss</string>
    <string name="bulk_up">Bulk Up</string>
    <string name="endurance">Endurance</string>
    <string name="flexibility">Flexibility</string>
    <string name="workouts">Create a Custom Workout</string>
    <string name="enter_a_workout_name">Enter a Workout Name</string>
    <string name="add">Add</string>
    <string name="select_an_existing_workout">Select an Existing Workout</string>
    <string name="register_new_account">Register New Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="account_login">Account Login</string>
    <string name="login">Login</string>
    <string name="sets">Sets: </string>
    <string name="weight">Weight: </string>
    <string name="reps">Reps: </string>
    <string name="submit_workout">Submit Workout</string>
    <string name="add_exercise">Add an Exercise</string>
    <string name="exercise_name">Exercise Name: </string>
    <string name="number_of_sets">Number of Sets:</string>
    <string name="add_exercise_button">Add Exercise</string>
    <string name="number_of_reps">Number of Reps:</string>
    <string name="signout">Signout</string>
    <string name="view_user_history">View User History</string>
    <string name="find_workouts">Find past or new workouts: </string>
    <string name="user_history">User History</string>
    <string name="back">Back</string>
    <string name="select_workout_do_again">Select a Workout to Do It Again: </string>
    <string name="cancel">Cancel</string>
    <string name="edit_exercise">Edit exercise:</string>
    <string name="discover_workouts">Discover Workouts</string>
</resources>