<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/black">

    <TextView
        android:id="@+id/fitness_goal_TextView"
        android:text="@string/choose_a_workout_option"
        android:layout_gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/white"
        android:textSize="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/healthImprovementString"
        android:text="@string/health_improvement"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:layout_below="@+id/fitness_goal_TextView"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weight_loss_button"
        android:text="@string/weight_loss"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_below="@+id/healthImprovementString"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flexibility_button"
        android:text="@string/flexibility"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_toRightOf="@+id/weight_loss_button"
        android:layout_below="@+id/healthImprovementString"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/strengthTrainingString"
        android:text="@string/strength_training"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:layout_below="@+id/weight_loss_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bulk_up_button"
        android:text="@string/bulk_up"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_below="@+id/strengthTrainingString"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/endurance_button"
        android:text="@string/endurance"
        android:textColor="@color/black"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_below="@+id/strengthTrainingString"
        android:layout_toRightOf="@+id/bulk_up_button"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/findWorkoutsView"
        android:text="@string/find_workouts"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_below="@+id/bulk_up_button"
        android:layout_margin="10dp"
        android:layout_gravity="left"/>

    <Button
        android:id="@+id/history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/findWorkoutsView"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/view_user_history"
        android:textColor="@color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/discoverWorkoutsButton"
        android:text="@string/discover_workouts"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_below="@+id/findWorkoutsView"
        android:layout_toRightOf="@+id/history_button"/>

    <Button
        android:id="@+id/signout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:padding="10dp"
        android:text="@string/signout"
        android:textColor="@color/black" />




</RelativeLayout>