<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background" android:layout_gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/historyString"
        android:text="@string/user_history"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selectWorkoutAgain"
        android:text="@string/select_workout_do_again"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:gravity="left"
        android:layout_below="@+id/historyString"
        android:layout_margin="5dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/historyList"
        android:layout_below="@+id/selectWorkoutAgain"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/returnButton"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:text="@string/back"
        android:padding="5dp"/>
</RelativeLayout>