<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginImage"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no"
        android:background="@color/white"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/button_bg"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>