<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:textSize="20dp"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/edit_exercise"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:gravity="left"
        android:padding="10dp" />

    <TextView
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:id="@+id/setsString"
        android:gravity="right"
        android:text="@string/sets"
        android:textColor="@color/white"
        android:layout_below="@+id/title"
        android:layout_alignBottom="@id/numSets"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numSets"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_toRightOf="@id/setsString"
        android:layout_below="@id/title"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/repsString"
        android:gravity="right"
        android:text="@string/reps"
        android:textColor="@color/white"
        android:layout_alignEnd="@+id/setsString"
        android:layout_below="@id/setsString" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numReps"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_below="@id/numSets"
        android:layout_toRightOf="@+id/repsString"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weightString"
        android:text="@string/weight"
        android:gravity="right"
        android:textColor="@color/white"
        android:layout_alignEnd="@+id/setsString"
        android:layout_below="@+id/numReps"
        android:layout_alignBottom="@id/weight"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/weight"
        android:background="@color/white"
        android:textColor="@color/black"
        android:layout_below="@+id/numReps"
        android:layout_toRightOf="@+id/weightString"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="2dp"/>

</RelativeLayout>